--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "mapbox-gl": "^1.13.0",
     "ng-zorro-antd": "^8.5.2",
     "ngx-pagination": "^5.0.0",
